socials z-index bug fix

--- a/src/styles/layout/contact.scss
+++ b/src/styles/layout/contact.scss
@@ -13,7 +13,7 @@
     color: abs.$color-white;
   }
   &__socials{
-    z-index: 2;
+    z-index: 1;
     display: flex;
     align-items: center;
     gap: 3rem;
